# dossier

./: .gitignore  Cargo.toml  README.md  dossier.nginx.conf  dossier.service
.github/workflows/: clippy.yml  deploy.yml  docs.yml
src/: api.rs  cli.rs  compactor.rs  main.rs  permissions.rs  schema.rs  webserver.rs
