[package]
name = "dossier"
version = "0.1.0"
edition = "2021"
publish = false
readme = "./README.md"
repository = "https://github.com/khonsulabs/dossier"

[dependencies]
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "server",
    "client",
    "cli",
    "token-authentication",
    "password-hashing",
    "hyper",
    "websockets",
] }
bonsaidb-files = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "async",
] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }
hyper = { version = "0.14.18", features = [
    "http1",
    "server",
    "runtime",
    "stream",
] }
http = { version = "0.2.6" }
anyhow = { version = "1.0.56", features = ["backtrace"] }
thiserror = "1"
rand = "0.8"
clap = { version = "3.1.8", features = ["env"] }
mime_guess = "2.0.4"
blake3 = { version = "1.3.1" }
base64 = "0.13.0"
flume = "0.10.12"
parking_lot = "0.12.0"
futures = "0.3"
