[package]
name = "dossier"
version = "0.1.0"
edition = "2021"
publish = false
readme = "./README.md"
repository = "https://github.com/khonsulabs/dossier"

[dependencies]
bonsaidb = { git = "https://github.com/khonsulabs/bonsaidb.git", branch = "main", features = [
    "server",
    "client",
    "cli",
    "token-authentication",
    "password-hashing",
    "hyper",
    "websockets",
    "files",
] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }
hyper = { version = "0.14.18", features = [
    "http1",
    "server",
    "runtime",
    "stream",
] }
http = { version = "0.2.6" }
anyhow = { version = "1.0.56", features = ["backtrace"] }
thiserror = "1"
rand = "0.8"
clap = { version = "4.1.8", features = ["env", "derive"] }
mime_guess = "2.0.4"
blake3 = { version = "1.3.1" }
base64 = "0.21.0"
flume = "0.10.12"
parking_lot = "0.12.0"
futures = "0.3"


# [patch."https://github.com/khonsulabs/bonsaidb.git"]
# bonsaidb = { path = "../bonsaidb/crates/bonsaidb" }
# bonsaidb-files = { path = "../bonsaidb/crates/bonsaidb-files" }

# [patch.crates-io]
# nebari = { path = "../nebari/nebari" }
# arc-bytes = { path = "../shared-buffer" }
